Styled HTML outline for grid settings as well as aligned together the grid and settings and fixed alignment issue in top header

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -27,7 +27,7 @@ body {
 
 .header-title {
   color: hsl(0, 0%, 80%);
-  font-size: 24px;
+  font-size: 32px;
   font-weight: 600;
   padding: 0;
   margin: 0;
@@ -36,7 +36,7 @@ body {
 .header-links {
   color: hsl(0, 0%, 80%);
   list-style: none;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: 600;
   display: flex;
   margin: 0;
@@ -44,8 +44,42 @@ body {
   gap: 16px;
 }
 
+.header-right {
+  align-self: center;
+}
+
 .main-container {
   color: hsl(0, 0%, 80%);
+  display: flex;
+  justify-content: center;
+}
+
+.left {
+  display: flex;
+  flex-direction: column;
+  padding-right: 60px;
+}
+
+.settings-title {
+  font-size: 32px;
+  font-weight: 600;
+  padding-bottom: 25px;
+}
+
+.settings-colour-title {
+  font-size: 24px;
+  font-weight: 600;
+  padding-bottom: 50px;
+}
+
+.settings-slider-title {
+  font-size: 24px;
+  font-weight: 600;
+  padding-bottom: 15px;
+}
+
+.settings-slider {
+  width: 100px;
 }
 
 .grid-container {
@@ -59,11 +93,11 @@ body {
 
 .grid-item {
   box-sizing: border-box;
-  border: 0.5px solid hsl(0, 0%, 40%);
+  border: 1px solid hsl(0, 0%, 40%);
 }
 
 .grid-item-hover {
-  opacity: 80%;
+  opacity: 70%;
 }
 
 a {
